--- a/echarts.html
+++ b/echarts.html
@@ -26,7 +26,10 @@
     <div id="chart17"></div>
     <div id="chart18"></div>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
     <script>
         var chartDom = document.getElementById('chart1');
         var myChart = echarts.init(chartDom, {} , {
