adding export menus

--- a/amcharts.html
+++ b/amcharts.html
@@ -63,7 +63,7 @@
         chart.cursor.behavior = "zoomXY";
         chart.cursor.lineX.disabled = true;
 
-        
+        chart.exporting.menu = new am4core.ExportMenu();
         chart.legend = new am4charts.Legend()
         chart.legend.position = 'top'
         chart.legend.paddingBottom = 20
